# V-Twin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ENGINE_THERMAL_MODEL.md  ENGINE_WEAR_METRICS.md  Makefile  README.md
cmake/: engine_sim_sources.cmake  engine_sim_targets.cmake  engine_sim_tests.cmake
es/objects/: objects.mr
include/: engine_sim_application.h
include/app/: engine_sim_application.h
include/audio/: adaptive_volume_filter.h  butterworth_low_pass_filter.h  convolution_filter.h  delay_filter.h  derivative_filter.h  feedback_comb_filter.h  gaussian_filter.h  jitter_filter.h  leveling_filter.h  low_pass_filter.h  preemphasis_filter.h  ring_buffer.h  synthesizer.h
include/rendering/: combustion_chamber_object.h  connecting_rod_object.h  crankshaft_object.h  cylinder_bank_object.h  cylinder_head_object.h  geometry_generator.h  piston_object.h  shaders.h
include/shared/: function.h
include/simulation/: engine_condition_model.h  engine_cooling_model.h  engine_thermal_model.h  engine_wear_model.h  piston_engine_simulator.h  simulator.h
include/ui/: afr_cluster.h  cylinder_pressure_gauge.h  cylinder_temperature_gauge.h  engine_condition_cluster.h  engine_view.h  engine_wear_cluster.h  firing_order_display.h  fuel_cluster.h  gauge.h  info_cluster.h  labeled_gauge.h  load_simulation_cluster.h  mixer_cluster.h  oscilloscope.h  oscilloscope_cluster.h  performance_cluster.h  right_gauge_cluster.h  throttle_display.h  ui_button.h  ui_element.h  ui_manager.h
launch/: Launcher.py  ascii-art.txt
launcher_python/: config.py  main.py
launcher_python/screens/: engine_folder_selection.py  engine_schema.py  engine_selection.py  mode_selection.py  ui_scale.py
launcher_python/utils/: launcher.py
scripting/include/: engine_node.h  engine_sim.h
scripting/src/: channel_types.cpp  compiler.cpp  engine_context.cpp  language_rules.cpp
scripts/: bootstrap-linux.sh  build.sh  check.sh  configure.sh  run.sh
src/: engine_sim_application.cpp  engine_sim_application_input.cpp  engine_sim_application_rendering.cpp  engine_sim_application_simulation.cpp  main.cpp
src/app/: engine_sim_application.cpp  main.cpp  (+3 more)
test/: engine_condition_model_tests.cpp  engine_cooling_model_tests.cpp  engine_thermal_model_tests.cpp  function_test.cpp  gas_system_tests.cpp  synthesizer_tests.cpp
(+102 files in other folders)
